--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <html lang="en">
     <!-- HEAD e a cabeca do codigo -->
 <head>
+    <!-- na cabeca colocamos na linha abaixo com o meta charset definindo os elementos e logo o nome do navegador os contatos que a "cabeca do html vai ter" -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Document</title> 
 </head>
 <body>
     
